[package]
name = "aws-credential-process-provider-from-dotenv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["cargo"] }
dotenvy = { git = "https://github.com/allan2/dotenvy.git", branch = "main"}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
