[package]
name = "aws-credential-process-provider-from-dotenv"
version = "0.1.0"
edition = "2024"
description = "AWS credential provider from .env files for AWS CLI credential_process"
license = "MIT"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.53", features = ["cargo"] }
dotenvy = { git = "https://github.com/allan2/dotenvy.git", rev = "fa25166994d6978bd2e002f0ed190c0c39674ebe" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
redis = "1.0.3"
dirs = "6.0.0"
toml = "1.0.0"
shellexpand = "3.1.1"